@@ -1,3 +1,0 @@
-MD5 8fd096289eeb07701cab4a3adf1d4ee9 pam_mktemp-1.0.2.tar.gz 4272
-RMD160 9eb4c405dd49fc9170b4fbf2a80c51e3f5e9df81 pam_mktemp-1.0.2.tar.gz 4272
-SHA256 f887e64809efbb812ed3b5623bca7f3d0920fc87a96494e19cae166b94520d2e pam_mktemp-1.0.2.tar.gz 4272
