@@ -1,38 +1,0 @@
-# Copyright 1999-2007 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-auth/pam_mktemp/Attic/pam_mktemp-1.0.2.ebuild,v 1.1 2007/04/17 20:24:35 swegener Exp $
-
-inherit toolchain-funcs pam
-
-DESCRIPTION="Create per-user private temporary directories during login"
-HOMEPAGE="http://www.openwall.com/pam/"
-SRC_URI="http://www.openwall.com/pam/modules/${PN}/${P}.tar.gz"
-
-LICENSE="freedist"
-SLOT="0"
-KEYWORDS="~amd64 ~x86"
-IUSE=""
-
-DEPEND="virtual/pam"
-RDEPEND="${DEPEND}"
-
-src_compile() {
-	emake \
-		CC="$(tc-getCC)" \
-		CFLAGS="${CFLAGS} -fPIC" \
-		LDFLAGS="${LDFLAGS} -lpam --shared" \
-		|| die "emake failed"
-}
-
-src_install() {
-	dopammod pam_mktemp.so
-	dodoc README
-}
-
-pkg_postinst() {
-	elog "To enable pam_mktemp put something like"
-	elog
-	elog "session    optional    pam_mktemp.so"
-	elog
-	elog "into /etc/pam.d/system-auth!"
-}
